bugfix: mobile horizontally overflow, change margin
- mobile min-width change as max-width (min-width makes x-overflow)
- margin change for avartar text

--- a/src/sass/components/profile/_avartar.scss
+++ b/src/sass/components/profile/_avartar.scss
@@ -21,7 +21,8 @@
   }
 
   .avartar-name {
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     text-align: center;
     color: $icon-color;
     font-size: 2rem;
@@ -29,20 +30,20 @@
 
   @media (max-width: $bp-mobile) {
     $img-height: 25rem;
-    $img-min-width: 62.5rem; // 500px
+    $img-max-width: 62.5rem; // 500px
     margin: 0;
     width: 100%;
     height: auto;
 
     .avartar-image {
       height: $img-height;
-      min-width: $img-min-width;
+      max-width: $img-max-width;
       border-radius: 0;
 
       img {
         border-radius: 0;
         height: $img-height;
-        min-width: $img-min-width;
+        max-width: $img-max-width;
         object-fit: cover;
       }
     }
