--- a/src/sass/components/profile/_icons.scss
+++ b/src/sass/components/profile/_icons.scss
@@ -14,7 +14,6 @@
   }
 
   @media (max-width: $bp-mobile) {
-    margin-top: 2rem;
     width: 100%;
     padding: 0 5rem;
 
