--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -26,9 +26,5 @@
   @media (max-width: $bp-mobile) {
     display: flex;
     flex-direction: column;
-
-    .profile {
-      height: auto;
-    }
   }
 }
